--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     compile project(':slider')
     //compile 'com.komi.slider:slider:0.2.0'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.flyco.dialog:FlycoDialog_Lib:1.2.6@aar'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
